# eva-auth

./: .coverage  .env.example  .eva-housekeeping.json  .eva-memory.json  .eva-pod.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  COVERAGE-REPORT.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-REPORT.md  Dockerfile  GITHUB-ACTIONS-SETUP.md  LOCAL-DEPLOYMENT.md  PHASE-3-COMPLETION-SUMMARY.md  PROJECT-SUMMARY.md  QUICK-START.md  README.md  SECURITY.md  SESSION-SUMMARY.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  publish-profile.xml  pyproject.toml  tsconfig.json
.eva/: .eva-workspace.schema.json  production-status.json
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  quality-gate.yml
docs/: DEPLOYMENT.md  INTEGRATION.md  PHASE-1-EVIDENCE.md  PHASE-2-EVIDENCE.md  PHASE-3-EVIDENCE.md  SECURITY-CHECKLIST.md  SPECIFICATION.md
infrastructure/azure/: deploy-existing-rg.ps1  deploy-to-existing-rg.bicep  deploy.ps1  main.bicep
infrastructure/azure/modules/: app-insights.bicep  app-service-plan.bicep  cosmos-db.bicep  key-vault.bicep  log-analytics.bicep  redis.bicep  web-app.bicep
reports/: LOAD-TEST-RESULTS.md  bandit-report.json  poetry-audit.txt
scripts/: run-load-tests.ps1  run-security-scans.ps1
src/: errors.ts  index.ts
src/__tests__/: errors.test.ts  middleware-errors.test.ts  middleware-role-error.test.ts  middleware-success.test.ts  middleware.test.ts  roles-advanced.test.ts  roles.test.ts  validator-allowedTenants-success.test.ts  validator-aud-invalid-type.test.ts  validator-basic.test.ts  validator-edges.test.ts  validator-success.test.ts
src/eva_auth/: __init__.py  config.py  main.py  models.py
src/eva_auth/apikeys/: __init__.py  api_key_manager.py
src/eva_auth/audit/: __init__.py  audit_logger.py
src/eva_auth/middleware/: __init__.py  (+1 more)
src/examples/: validate.ts
src/token/: middleware.ts  roles.ts  types.ts  validator.ts
src/util/: errors.ts
tests/: conftest.py  test_100_percent_coverage.py  test_100_percent_push.py  test_api_key_manager.py  test_audit_logger.py  test_auth_middleware_coverage.py  test_auth_router_coverage.py  test_azure_ad_b2c.py  test_config.py  test_final_coverage.py  test_integration.py  test_jwt_validator.py  test_jwt_validator_coverage.py  test_load.py  test_main.py  test_main_coverage.py  test_microsoft_entra_id.py  test_mock_auth.py  test_models.py  test_rbac_engine.py  test_session_manager.py
(+14 files in other folders)
